# llamalogalyzer

./: .gitignore  CONTRIBUTING.md  README.md  main.sh  requirements.txt  setup.py  setup.sh  verify_installation.sh
docs/: api.md  index.html  installation.md  usage.md
examples/: advanced_usage.py  basic_usage.py
llamalogalyzer/: __init__.py  client.py  main.py  utils.py
llamaloganalyzer-mlx/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  requirements.txt  setup_mlx_env.sh
llamaloganalyzer-mlx/.github/workflows/: rust.yml
llamaloganalyzer-mlx/docs/: DEVELOPER_GUIDE.md  DOCUMENTATION_GUIDE.md
llamaloganalyzer-mlx/docs/api/: API_REFERENCE.md
llamaloganalyzer-mlx/docs/dev_guide/: ARCHITECTURE.md
llamaloganalyzer-mlx/docs/examples/: advanced_anomaly_detection.md
llamaloganalyzer-mlx/docs/user_guide/: INSTALLATION.md
llamaloganalyzer-mlx/examples/: basic_analysis.rs
llamaloganalyzer-mlx/python/anomaly_detection/: __init__.py
llamaloganalyzer-mlx/python/mlx_models/: __init__.py  anomaly_detector.py
llamaloganalyzer-mlx/scripts/: verify_integration.py
llamaloganalyzer-mlx/src/: lib.rs
llamaloganalyzer-mlx/src/analyzer/: mod.rs  patterns.rs  standard.rs  statistics.rs
llamaloganalyzer-mlx/src/cli/: app.rs  mod.rs  tui.rs
llamaloganalyzer-mlx/src/ml/: anomaly.rs  mod.rs
llamaloganalyzer-mlx/src/parsers/: mod.rs  standard.rs
llamaloganalyzer-mlx/src/utils/: logger.rs  mod.rs
llamaloganalyzer-mlx/src/visualizers/: mod.rs
llamaloganalyzer-mlx/tests/: test_anomaly_detection.rs
(+28 files in other folders)
